[tool.poetry]
name = "linear-algebra-jupyter"
version = "0.1.0"
description = ""
authors = ["hqman <hqmank@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.2.1"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
